FIX _ problem with overflow in Registration

--- a/src/components/Registration/StartWizard/StartWizard.module.scss
+++ b/src/components/Registration/StartWizard/StartWizard.module.scss
@@ -66,9 +66,11 @@
   flex-direction: column;
   background-color: #fff;
   border-radius: 0.75rem;
-  padding: 1rem;
+  padding: 5rem !important;
   width: 100%;
-  margin: auto auto 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
 
   // d-flex w-100 mb-auto mx-auto flex-column bg-white  rounded p-3
 }
